# Trafikinformation

./: .gitignore  Makefile  README.md  trafikinformation.cabal
app/: Main.hs
src/: Trafikinformation.hs
src/TrafikLib/: Fetching.hs  ParseRss.hs  Play.hs  TrafikConfig.hs
test/: Spec.hs
