cabal-version: 1.12

name:           trafikinformation
version:        0.1.0.0
description:    Todo
homepage:       https://github.com/WASDi/trafikinformation
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      Trafikinformation,
      TrafikLib.ParseRss,
      TrafikLib.TrafikConfig
  other-modules:
      Paths_trafikinformation,
      TrafikLib.Fetching,
      TrafikLib.Play
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      mtl,
      process,
      text,
      transformers,
      xml
  default-language: Haskell2010

executable trafikinformation-exe
  main-is: Main.hs
  other-modules:
      Paths_trafikinformation
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , trafikinformation
  default-language: Haskell2010

test-suite trafikinformation-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_trafikinformation
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , HUnit
    , mtl
    , trafikinformation
  default-language: Haskell2010
